docs(apk): procedimiento real de compilacion en la VM, con las trampas
APK recompilado el 2026-08-11 contra https://aquora.xpertic.co. Se documenta lo
aprendido, incluido lo que estaba mal en el propio documento.

Correcciones a afirmaciones previas:
- El debug.keystore de Expo es FIJO, no aleatorio. Se verifico compilando en una
  maquina distinta (la VM, sin keystore previo): huella identica. La advertencia
  anterior sobre que --clean rompia las actualizaciones era infundada.
- La VM tiene memoria DINAMICA de Hyper-V (hv_balloon): en reposo reporta ~2 GB y
  bajo carga el hipervisor concede hasta ~7 GB. Las lecturas contradictorias que
  se veian no eran un error: ambas eran ciertas en su momento. Se corrige tambien
  el RUNBOOK, que daba 2 GB como dato fijo.

Trampas documentadas (todas costaron tiempo):
- El ORDEN de los scripts no es el obvio: config-and-ndk.sh escribe en
  android/gradle.properties, que no existe hasta despues del prebuild.
- La VM solo tiene el JRE. Se resuelve con un JDK portatil dentro del toolchain
  desechable, sin sudo, y se va con la limpieza.
- install-sdk.sh instalaba solo android-35; el proyecto pide el 36.
- apksigner sin JAVA_HOME no imprime nada y NO falla: parece un APK sin firmar.
- El build hay que desacoplarlo con setsid y esperar por un archivo centinela con
  conexiones SSH cortas; una sesion larga se cae.
- pkill/pgrep -f con un patron presente en el propio comando SSH mata la sesion.
- El proceso de gradle es "jdk/bin/java --add-opens=...", sin GradleWrapperMain:
  buscar ese nombre da falso negativo y lleva a lanzar un segundo build encima.
- host-apk.sh pisa la config de nginx y borraria el HTTPS. Lleva aviso.

PENDIENTES: el APK queda compilado y verificado, pero SIN publicar — el que se
sirve en /var/www/ptap-download sigue apuntando al tunel apagado.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>